adds Open Graph protcol

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
     <link rel='icon' href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Joseph Coyne</title>
+    <!-- Open Graph protocol -->
+    <meta property="og:title" content="Full-stack Software Developer. Welcome to my corner of the web!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="www.coyne.dev" />
+    <meta property="og:image" content="https://www.coyne.dev/img/headshot-cropped.e6de5bd9.png" />
+    
   </head>
   <body>
     <noscript>
