changes mobile projects to accordians

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <link rel="stylesheet" type="text/css" href="fonts.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel='icon' href="<%= BASE_URL %>favicon.ico">
     
     <title>Joseph Coyne</title>
@@ -14,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="www.coyne.dev" />
     <meta property="og:image" content="https://www.coyne.dev/img/headshot-cropped.e6de5bd9.png" />
-    
+    <script src="https://kit.fontawesome.com/c00ebe878d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>
