--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#4299e1">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
+    <script src="https://kit.fontawesome.com/c00ebe878d.js" crossorigin="anonymous"></script>
     
   </head>
   <body>
